# home-topology

./: .cursorrules  .gitignore  ADR-LOG.md  CHANGELOG.md  CODING-STANDARDS.md  CONTRIBUTING.md  DESIGN.md  DISCUSSION-NEEDED.md  Makefile  PROJECT-SUMMARY.md  README.md  SECURITY.md  TEST-COMMANDS.md  TESTING-GUIDE.md  WORK-TRACKING.md  example.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: CURSOR-AI-GUIDE.md  adr-log.md  ai-development-guide.md  ai-guide.md  architecture.md  coding-standards.md  decisions-pending.md  integration-guide.md  open-questions.md  project-overview.md  project-status.md
docs/design/: location-deletion-design.md
docs/integration/: README.md  api-cheat-sheet.md  api-reference.md  decisions.md  ha-sync-services.md  integration-guide.md  integrity-validation.md  ui-design.md
docs/modules/: actions-design.md  ambient-implementation-summary.md  ambient-module-design.md  automation-architecture.md  occupancy-design-decisions.md  (+5 more)
examples/: actions_demo.py  occupancy-demo.py  presence-example.py
scripts/: check-dates.sh
tests/: __init__.py  test-advanced-occupancy.py  test-location-manager.py  test-occupancy-module.py  test_adjacency_manager.py  test_advanced_occupancy.py  test_basic.py  test_location_events.py  test_location_manager.py  test_occupancy_integration.py  test_occupancy_module.py
(+46 files in other folders)
