[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-topology"
version = "0.2.0-alpha"
description = "A platform-agnostic home topology kernel for modeling spaces and attaching behavior modules"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Michael Cumming", email = "mjcumming@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/mjcumming/home-topology"
Repository = "https://github.com/mjcumming/home-topology"
Documentation = "https://github.com/mjcumming/home-topology#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/home_topology"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

